2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  Spaces have to be scaped as '_' only in the directory, not
	  in the file name.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: 

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Fixed small issue in
	  generic instantination that lead to a bug with indexers.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Correctly serialize indexer parameters.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.Dom/IMember.cs:
	* MonoDevelop.Projects.Dom/IMethod.cs:
	* MonoDevelop.Projects.Dom/IProperty.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/IParameter.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/IBaseMember.cs:
	* MonoDevelop.Projects.Dom/DomParameter.cs:
	* MonoDevelop.Projects.Dom/LocalVariable.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs: Made it a
	  bit easier to work with the DOM.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  Properly escape spaces in resource names. Fixes bug #533043
	  - ResourceID for resx files on localized forms is incorrect
	  if the name contains spaces.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/WorkspaceItem.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs: Properly set the
	  last write time flag after loading a project.

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: